# rapyuta-kinfu

./: .gitignore  README  kinfu_libav.cfg  kinfu_libav.launch  kinfu_libav_color.cfg  kinfu_libav_color.launch  kinfu_raw.cfg  kinfu_raw.launch  nvidia.conf  pcl.patch
kinfu/: .gitignore  CMakeLists.txt  package.xml
kinfu/cfg/: dyn_config.cfg
kinfu/src/: kinfu.cpp
launch/: demo.launch  local.launch  receiver.launch  sender.launch
rce/libav/: color.cfg  depth_only.cfg
