<package>
  <name>kinfu</name>
  <version>0.0.1</version>
  <description>ROS wrapper for Kinfu Large Scale from pcl_unstable.</description>

  <maintainer email="dominique.hunziker@gmail.com">Dominique Hunziker</maintainer>
  <author email="dominique.hunziker@gmail.com">Dominique Hunziker</author>
  <url type="website">https://github.com/dominiquehunziker/rce_kinfu</url>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
</package>


